= Prigner v0.1.1 (2010-10-21) - Changelog

== 2010-10-21

* Releasing of version 0.1.1.
* Bug fix in command to build new project.
  * The bug occurred when the user run the command +new+. The command interpreted an option as a project  path.
* Improvements in the files of tests.
  * Shared methods in the main module. 
  * Changes in the tests for template and spec classes.

== 2010-10-19

* RDoc is the default format for documentation.
* Improvements in the tasks and documentation.
  * The task for build the changelog file has been improved. 
  * Adding of the validation for check if the version has been tagged to releasing.
* Improvements in the tasks.
  * Improvements in the versioning and packaging tasks. 
  * Adding of the packaging configurations.

== 2010-10-18

* Cleanup the code of the tasks.
* Releasing of version 0.1.0.

== 2010-10-16

* Adding of templates for Ruby projects.
* Command for create a new project.
* Status for CLI commands and fixes in builder test.
* Improvements in builder.
  * All methods returns the path and the state information. 
  * Removing of PWD from paths.

== 2010-10-15

* Small improvements in tasks and gemspec updates.
* Updates in changelog file.
* Fixes in the task to update changelog file.
* Updates in date of version.
* Adding of task to handle date of version.
* Changes in the path to shared templates.
* Updates in the informations.
* Improvements in template and new CLI commands.
  * Show all templates for use in the CLI commands. 
  * RuntimeError when the CLI is unable to run a command. 
  * Adding list and new commands.
* Main executable.
* Mask for template presentation.

== 2010-10-14

* Fixtures in handle exceptions in path and specfile.
* Adjustments in exceptions for Specfile.
* RubyGems.
* Adjustments in the library path.

== 2010-10-13

* Removing conversion from string to pathname.

== 2010-09-29

* Fixes in the LOAD_PATH variable for requirements.
* Configuration for RVM.